[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pywarden"
version = "1.1.5"
authors = [
  { name="pschlo", email="author@example.com" },
]
description = "Bitwarden CLI/API wrapper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests"
]

[tool.hatch.build.targets.sdist]
# choose here what to include in sdist
# the wheel will only include src/pywarden anyway
# see https://discuss.python.org/t/should-sdists-include-docs-and-tests/14578
# include = [ ]
