[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pywarden"
version = "1.2.0"
authors = [
  { name = "pschlo", email = "70105856+pschlo@users.noreply.github.com" },
]
description = "Bitwarden CLI/API wrapper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.5",
]

[dependency-groups]
dev = [
  "pytest>=8.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pywarden"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403"]
